--- a/css/styles.css
+++ b/css/styles.css
@@ -136,12 +136,12 @@ img {
   }
   
 .contacts-link:hover,
-.contacts-link:focus,
-.icon-envelope:hover,
-.icon-envelope:focus,
-.icon-smartphone:hover,
-.icon-smartphone:focus {
-    color: var(--accent-color);
+.contacts-link:focus {
+    color: var(--accent-color); 
+  } 
+
+.contacts-link:hover .contacts-icon,
+.contacts-link:focus .contacts-icon {
     fill: var(--accent-color); 
   }
 
@@ -154,10 +154,9 @@ img {
     margin-right: 50px;
   }
 
-.icon-envelope,
-.icon-smartphone {
+.contacts-icon {
     margin-right: 10px;
-    fill: var(--primary-text-color);
+    fill: var(--primary-text-color);  
   }
 
 /* Hero */
@@ -186,7 +185,7 @@ img {
 .image-hero {
     max-width: 1600px;
     height: 600px;
-    background-size: contain;
+    background-size: cover;
     background-repeat: no-repeat;
     background-position: center;
     background-image: linear-gradient(
@@ -297,6 +296,7 @@ img {
   }
 
 .job-description {
+    margin-bottom: 16px;
     font-weight: 400;
     font-size: 16px;
     line-height: 1.18;
@@ -305,10 +305,6 @@ img {
 .section-team {
     background-color: #F5F4FA;    
     max-width: 1600px;
-    height: 708px;
-    background-size: contain;
-    background-repeat: no-repeat;
-    background-position: center;
     margin-left: auto;
     margin-right: auto;
   }  
@@ -328,16 +324,21 @@ img {
 
 .social-team {
     display: flex;
-    justify-content: space-between;
-    padding: 0px 32px 30px 32px;
+    justify-content: center;
+  }
+
+.social-link-icon:not(:last-child) {
+    margin-right: 10px;
   }
 
 .social-link:hover, 
-.social-link:focus,
-.social-icon:hover, 
-.social-icon:focus {
-    fill: #ffffff; 
+.social-link:focus { 
     background-color: var(--accent-color);
+  }
+
+.social-link:hover .social-icon,
+.social-link:focus .social-icon { 
+    fill: var(--primary-white-color);
   }
 
 .social-link {
@@ -380,8 +381,8 @@ img {
     border-radius: 4px;
   }
 
-.clients-icon:hover,
-.clients-icon:focus {
+.clients-link:hover .clients-icon, 
+.clients-link:hover .clients-icon {
     fill: var(--accent-color); 
   } 
 
@@ -420,6 +421,12 @@ img {
     line-height: 1.71;
     font-style: normal; 
   } 
+
+.social-footer-icon {
+    width: 20px;
+    height: 20px;
+    fill: var(--primary-white-color);
+   }
 
 .contacts-footer-link {
     color: var(--third-text-color);
@@ -485,6 +492,7 @@ img {
 .menu-btn:focus {
     color: var(--primary-white-color);
     background-color: var(--accent-color);
+    box-shadow: 0px 3px 1px rgba(0, 0, 0, 0.1), 0px 1px 2px rgba(0, 0, 0, 0.08), 0px 2px 2px rgba(0, 0, 0, 0.12);
   }
   
 /* Наши проекты и описание */ 
